<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rvContainerLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView2"
        style="@android:style/Widget.Holo.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/llEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAppName"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/my_appcompat_imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llEmail"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/my_appcompat_imageview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_key" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />


            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llSenha"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_login"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progress"
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvEntre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btLogin"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/action_sign_in_short"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/llSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEntre"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibLoginFacebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/button_login_social"
                    android:contentDescription=""
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_facebook_box" />

                <ImageButton
                    android:id="@+id/ibLoginGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/button_login_social"
                    android:contentDescription=""
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_google_plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llSocial"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/action_register"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_forgot_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:text="@string/action_recover"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="gone" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

